small change in abs-icon-3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -986,7 +986,7 @@ textarea.contact-input {
   .abs-icon-3 {
     bottom: -40px;
     left: 250px;
-    background-color: hsl(224deg 87% 28%);;
+    background-color: hsl(224deg 87% 28%);
   }
 
 
